# llm-json

./: .gitignore  LICENSE  README.md  context7.json  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: README.md  examples.md  index.html  modules.html
docs-md/: COMPREHENSIVE_GUIDE.md  README.md  modules.md
docs-md/classes/: LlmJson.md
docs-md/interfaces/: ExtractOptions.md  ExtractResult.md  JsonBlock.md  JsonParseError.md  SchemaDefinition.md  ValidationResult.md
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: LlmJson.html
docs/interfaces/: ExtractOptions.html  ExtractResult.html  JsonBlock.html  JsonParseError.html  (+2 more)
examples/: advanced-patterns-example.ts  array-example.ts  example.ts  schema-validation-example.ts  schema-validation-examples.ts  zod-integration-example.ts
llm-json-py/: README.md  pyproject.toml
llm-json-py/examples/: array_example.py  basic_example.py  schema_validation_example.py
llm-json-py/tests/: __init__.py  test_basic.py
src/: array-extractor.ts  corrector.ts  extractor.ts  index.ts  types.ts  validator.ts
tests/: array-extract-examples.test.ts  array-extractor-additional.test.ts  array-extractor-coverage.test.ts  array-extractor.test.ts  code-block-extraction.test.ts  correction-examples.test.ts  corrector.test.ts  extract-examples.test.ts  extractor-branch-coverage.test.ts  extractor-coverage.test.ts  extractor.test.ts  index-branch-coverage.test.ts  index.test.ts  llm-examples.test.ts  markdown-extraction.test.ts  schema-validation.test.ts  validator-coverage.test.ts
